body fix overflow hidden

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,6 +37,7 @@ body {
   padding: 3.7rem 10rem 6rem 10rem;
   background-color: #fff;
   font-family: $mainFont;
+  overflow-x: hidden;
 
   &:before {
     content: "";
